# ClinicalEyes

./: .gitignore  README.md
backend/: .gitignore  .vercelignore  API_ENDPOINTS.md  README.md  pyproject.toml  requirements.txt  setup_database.py  vercel.json
backend/api/: .vercel_build_output  index.py  requirements.txt
backend/app/: main.py
backend/app/config/: config.py
backend/app/controller/: __init__.py  blog_controller.py  career_controller.py  contactus_controller.py  newsletter_controller.py
backend/app/db/: db.py
backend/app/models/: blog.py  careers.py  contactus.py  newsletter.py
backend/app/repository/: blog.py  careers.py  contactus.py  newsletter.py
backend/app/router/v1/: __init__.py  blog_router.py  career_router.py  contactus_router.py  newsletter_router.py
backend/app/schemas/: blog.py  careers.py  contactus.py  newsletter.py
backend/app/service/: blogservice.py  career_service.py  contactus_service.py  newsletter_service.py
backend/app/utils/: get_service_obj.py
frontend/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: _headers
frontend/src/: App.jsx  index.css
frontend/src/components/: AboutHero.jsx  AboutStory.jsx  AboutTeam.jsx  FAQ.jsx  Footer.jsx  HeroSection.jsx  Navbar.jsx  Newsletter.jsx  OurAreasOfExpert.jsx  PrefferedResourceModelling.jsx  ServiceCard.jsx  ServiceSection.jsx  Testimonials.jsx  WhyClinicalEyes.jsx
frontend/src/components/Blog/: BlogHero.jsx
frontend/src/pages/: About.jsx  Blog.jsx  Carrers.jsx  Contact.jsx  Home.jsx  Service.jsx
(+5 files in other folders)
